[package]
name = "quic-client"
version = "0.1.0"
authors = ["Tomislav Tomašić <tomislav.tomasichr@gmail.hr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
structopt = "0.3.14"
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
tokio = {version = "0.2.20", features = ["full"]}
quinn = "0.6.1"
common = { path = "../common", version = "0.1.0"}
directories = "2.0.2"
serde_json = "1.0.53"
rmp-serde = "0.14.3"
serde = "1.0.110"
serde_derive = "1.0.110"
broker-proto = { path = "../broker-proto", version = "0.1.0"}
warp = "0.2"
lazy_static = "1.4.0"